--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Gettr Dark Theme",
   "version": "1.0",
   "description": "Get dark theme on gettr!",
-  "permissions": ["activeTab"],
+  "permissions": [],
   "icons": {
     "16": "images/icon16.png",
     "32": "images/icon32.png",
